// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdfCDU sc-gsTDqH dIrhWV gLEXsB"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdfCDU sc-gsTDqH dIlspm gLEXsB"
>
  foo
</button>
`;
